--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -37,6 +37,13 @@ input[type="text"]:hover {
     background-color: rgba(108, 140, 255, 1);
 }
 
+.galleryBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .gallery {
     margin: 0;
     padding: 0;
@@ -46,6 +53,7 @@ input[type="text"]:hover {
     flex-wrap: wrap;
     gap: 1rem;
     list-style-type: none;
+    margin-bottom: 30px;
 }
 
 .gallery-image {
@@ -53,6 +61,22 @@ input[type="text"]:hover {
     border-bottom: none;
     width: 360px;
     height: 200px;
+}
+
+.loadMore {
+    width: 150px;
+    height: 50px;
+    padding: 8px 16px 8px 16px;
+    border: none;
+    border-radius: 8px;
+    background-color: rgba(78, 117, 255, 1);
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+}
+
+.loadMore:hover {
+    background-color: rgba(108, 140, 255, 1);
 }
 
 .desc-box {
